Normalizing batch images to be -1,1 as opposed to -0.5,0.5

--- a/dlnd_face_generation.ipynb
+++ b/dlnd_face_generation.ipynb
@@ -502,7 +502,9 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -548,7 +550,9 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def train(epoch_count, batch_size, z_dim, learning_rate, beta1, get_batches, data_shape, data_image_mode):\n",
@@ -576,6 +580,9 @@
     "        for epoch_i in range(epoch_count):\n",
     "            for batch_images in get_batches(batch_size):\n",
     "                # TODO: Train Model\n",
+    "                \n",
+    "                # Normalize to be in -1, 1 range\n",
+    "                batch_images = batch_images*2\n",
     "                steps += 1\n",
     "                \n",
     "                z = np.random.uniform(-1, 1, [batch_size, z_dim])\n",
@@ -1512,7 +1519,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -1533,7 +1542,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.7"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
